tests/core/ill-typed/undefined-variable/bad-if-and-undefined-variable-1.stella
language core;

fn main(x : Nat) -> Nat {
    return if true then y else succ(0)
}